--- a/1-vue.html
+++ b/1-vue.html
@@ -36,8 +36,9 @@
     var app3=new Vue({
         el:'#app3',
         data:{
-            xian:false
-        }
+            xian:false    module: {
+
+            }
     })
 </script>
 </body>
